2004-02-10  Julien MOUTTE <julien@moutte.net>

	* gst/gstevent.c: (_gst_event_free): Sometimes a tag event arrives but
	the structure does not contain a valid tag list. Adding a safety check
	to remove a noisy warning in that case.

2004-02-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst.c: fix name to be in line with others

2004-02-09  Julien MOUTTE <julien@moutte.net>

	* libs/gst/bytestream/bytestream.c: (gst_bytestream_peek): We should
	not shout that loud when len is 0. Just return 0 silently.

2004-02-09  Julien MOUTTE  <julien@moutte.net>

	* gst/gstdata.c: (gst_data_ref): Adding a categorized debug on data_ref
	because data_unref has one and i prefer the debug to be symetric.
	* gst/gstqueue.c: (gst_queue_locked_flush): Fix a huge memleak. Buffers
	were refed when added to the queue and unrefed only once when the queue
	was flushed. Now the flush handler unref the buffers two times : first
	unref for the ref added when pushing in the queue's tail and second
	unref to destroy the flushed buffer.

2004-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/pwg/building-boiler.xml: fix cvs checkout documentation

2004-02-06  David Schleef  <ds@schleef.org>

	* docs/random/ds/0.9-suggested-changes: Random ramblings
	* gst/elements/gstfilesrc.c: (gst_filesrc_get_mmap): Cast size_t
	to int before printing.
	* gst/parse/grammar.y: Fix gcc-2.95 style variadic macros.
	* gst/parse/parse.l: same.  See bug #129600

2004-02-06  David Schleef  <ds@schleef.org>

	* gst/gstindex.c: (gst_index_add_format), (gst_index_add_id),
	(gst_index_add_entry), (gst_index_add_associationv),
	(gst_index_add_association): Add gst_index_add_associationv()
	and clean up gst_index_add_association(). #127133

2004-02-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* autogen.sh: check out common with right tag if CVS/Tag exists

2004-02-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/ghostpads/ghostpads.c: (main):